# PEngine

Documents/: Introduction.docx  README.md
Documents/CMake/Link/: CMake Commands.url  CMake Tutorial 2.url  CMake Tutorial.url
Documents/Link/: README 문법.url
HelperSoftware/AutoCMakeListsGenerator/: AutoCMakeListsGenerator.csproj  AutoCMakeListsGenerator.sln  Program.cs
HelperSoftware/CreateClassWizard/: CreateClassWizard.csproj  CreateClassWizard.sln  Form1.Designer.cs  Form1.cs  Program.cs
HelperSoftware/CreateClassWizard/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
HelperSoftware/PEngineHeaderTool/: PEngineHeaderTool.csproj  PEngineHeaderTool.sln  Program.cs
HelperSoftware/PEngineHeaderTool/Properties/: AssemblyInfo.cs
HelperSoftware/ProjectManagement/: CMakeCore.cs  ClassGenerator.cs  ClassPresetMaker.Designer.cs  ClassPresetMaker.cs  ClassPresetSelectDialog.Designer.cs  ClassPresetSelectDialog.cs  Form1.Designer.cs  Form1.cs  ModuleGenerator.cs  Program.cs  ProjectManagement.csproj  ProjectManagement.sln  packages.config
HelperSoftware/ProjectManagement/Properties/: AssemblyInfo.cs  Resources.Designer.cs
Librarys/: README.md
PEngineProject/: README.md
PrototypingProject/: AutoGenerator.bat
PrototypingProject/Project/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  PEngine.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
PrototypingProject/Project/Player/WindowPlayer/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  PEngieWindowPlayer.sln  PEngieWindowPlayer.vcxproj  PEngieWindowPlayer.vcxproj.filters  PEngineWindowPlayer.sln  PEngineWindowPlayer.vcxproj  PEngineWindowPlayer.vcxproj.filters  cmake_install.cmake
PrototypingProject/Project/Runtime/Core/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CoreModule.sln  CoreModule.vcxproj  CoreModule.vcxproj.filters  cmake_install.cmake
PrototypingProject/Project/Runtime/Platform/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Platform.sln  Platform.vcxproj  Platform.vcxproj.filters  cmake_install.cmake
PrototypingProject/Project/Runtime/Rendering/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  RenderingModule.sln  (+3 more)
PrototypingProject/ProjectHelper/Data/: Data.json
PrototypingProject/Sources/: CMakeLists.txt  PEngine.Target.Main.cs
PrototypingProject/Sources/Player/WindowPlayer/: CMakeLists.txt  PEngineWindowPlayer.Target.cs
PrototypingProject/Sources/Player/WindowPlayer/Private/: Main.cpp
PrototypingProject/Sources/Runtime/Core/: CMakeLists.txt  Core.Target.cs  CoreModule.Target.cs
PrototypingProject/Sources/Runtime/Core/Private/: CoreDefine.cpp  PEngineCore.cpp
PrototypingProject/Sources/Runtime/Core/Private/Base/: PEngineMacros.cpp
PrototypingProject/Sources/Runtime/Core/Public/: CoreDefine.h  PEngineCore.h
PrototypingProject/Sources/Runtime/Core/Public/Base/: PEngineMacros.h
PrototypingProject/Sources/Runtime/Math/: CMakeLists.txt  Math.Target.cs
PrototypingProject/Sources/Runtime/Math/Private/: MathDefine.cpp  Vector.cpp
PrototypingProject/Sources/Runtime/Math/Public/: MathDefine.h  Vector.h
PrototypingProject/Sources/Runtime/MathModule/: CMakeLists.txt  MathModule.Target.cs
PrototypingProject/Sources/Runtime/MathModule/Private/: MathModuleDefine.cpp
PrototypingProject/Sources/Runtime/MathModule/Public/: MathModuleDefine.h
PrototypingProject/Sources/Runtime/Platform/: CMakeLists.txt  Platform.Target.cs
PrototypingProject/Sources/Runtime/Platform/Private/: WindowInstance.cpp  WindowPlatformInterface.cpp
PrototypingProject/Sources/Runtime/Platform/Private/Windows/: WindowHeader.cpp  WindowInstance.cpp
PrototypingProject/Sources/Runtime/Platform/Public/: WindowHeader.h  WindowInstance.h
PrototypingProject/Sources/Runtime/Platform/Public/Windows/: WindowHeader.h  WindowInstance.h  WindowPlatformInterface.h
PrototypingProject/Sources/Runtime/Rendering/: CMakeLists.txt  Rendering.Target.cs  RenderingModule.Target.cs
PrototypingProject/Sources/Runtime/Rendering/Private/: Graphics.cpp
PrototypingProject/Sources/Runtime/Rendering/Private/DirectX/: Camera.cpp  D3D12Core.cpp  DDSTextureLoader.cpp  DirectXHeader.cpp  FrameResource.cpp  GameTimer.cpp  GeometryGenerator.cpp  MathHelper.cpp  ShadowMap.cpp  ShadowMapApp.cpp  d3dApp.cpp  d3dUtil.cpp
PrototypingProject/Sources/Runtime/Rendering/Public/: Graphics.h
PrototypingProject/Sources/Runtime/Rendering/Public/DirectX/: Camera.h  D3D12Core.h  DirectXHeader.h  FrameResource.h  ShadowMap.h  UploadBuffer.h  d3dApp.h  d3dUtil.h
PrototypingProject/VSFastPrototype/: DirectXCore.cpp  DirectXCore.h  Graphics.cpp  Graphics.h  Main.cpp  PEngineCore.cpp  PEngineCore.h  VSFastPrototype.sln  VSFastPrototype.vcxproj  VSFastPrototype.vcxproj.filters  WindowHeader.h  WindowInstance.cpp  WindowInstance.h  WindowPlatformInterface.cpp  WindowPlatformInterface.h
PrototypingProject/VSFastPrototype/Debug/: VSFastPrototype.ilk  vc141.idb
PrototypingProjects/: README.md
PrototypingProjects/CMakeTest/: CMakeLists.txt
PrototypingProjects/DirectXModuleTest/: CMakeLists.txt
PrototypingProjects/DirectXModuleTest/Source/: CMakeLists.txt
TestProjects/AutoCMakeListsGenerator/: Program.cs
TestProjects/AutoCMakeListsGenerator/Properties/: AssemblyInfo.cs
TestProjects/CMakeTest/: CMakeLists.txt
TestProjects/CMakeTest/Sources/: main1.cpp
TestProjects/CmakeUseProject/: CMakeLists.txt
TestProjects/CmakeUseProject/Project/: CMakeCache.txt
TestProjects/Dx12Test/: D3DUtil.cpp  D3DUtil.h  DX12OneTool.cpp  DX12OneTool.h  Dx12Test.cpp  Dx12Test.rc  Dx12Test.sln  Dx12Test.vcxproj  Dx12Test.vcxproj.filters  Resource.h  header.h
TestProjects/Dx12Test/Debug/: Dx12Test.ilk  Dx12Test.res  vc141.idb
TestProjects/PEngineCMakeTool/: CMakeTool.cs  PEngineCMakeTool.csproj  PEngineCMakeTool.sln
TestProjects/PEngineCMakeTool/Properties/: AssemblyInfo.cs
TestProjects/RuntimeCompileCSfile/: Program.cs  RuntimeCompileCSfile.csproj  RuntimeCompileCSfile.sln
TestProjects/RuntimeCompileCSfile/Properties/: AssemblyInfo.cs
TestProjects/RuntimeCompileCSfile/csdir/: TestTarget.cs
(+62 files in other folders)
